--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,36 @@
-.App {
+header {
+  margin-top: 10px;
   text-align: center;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media ( prefers-reduced-motion : no-preference ) {
-
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-
-}
-
-.App-header {
-  align-items: center;
-  background-color: #282c34;
-  color: white;
+.container {
   display: flex;
-  flex-direction: column;
-  font-size: calc(10px + 2vmin);
-  justify-content: center;
-  min-height: 100vh;
+  justify-content: space-around;
+  margin-top: 20px;
+  width: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.categories {
+  border: 1px solid black;
+  margin-top: 10px;
+  width: 30%;
 }
 
-@keyframes App-logo-spin {
+.products {
+  border: 1px solid black;
+  display: flex;
+  flex-flow: row wrap;
+  right: auto;
+  width: 70%;
+}
 
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+.card-product {
+  border: 1px solid rgba(0, 0, 0, 0.383);
+  border-radius: 4px;
+  display: flex;
+  flex-flow: column;
+  margin: 5px;
+  padding: 10px;
+  width: 25%;
 }
