--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,34 @@
+body {
+  background-color: #FEF7DC;
+  color: rgb(0, 0, 0);
+}
+
 header {
-  margin-top: 10px;
+  background-color: #A19882;
+  color: rgb(0, 0, 0);
+  display: flex;
+  justify-content: space-around;
+  padding: 15px 0px;
   text-align: center;
   width: 100%;
+}
+
+#search-input {
+  margin: 2px;
+  padding: 5px;
+}
+
+#search-button {
+  padding: 5px;
+}
+
+.link-cart {
+  color: rgba(0, 0, 0, 0.904);
+  font-size: xx-large;
+}
+
+.link-cart:hover {
+  color: rgba(0, 0, 0, 0.603);
 }
 
 .container {
@@ -34,3 +61,5 @@ header {
   padding: 10px;
   width: 25%;
 }
+
+
