--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #fef7dc;
+  background-image: linear-gradient(210deg, #fffff2 0, #fffdd3 25%, #fadfaf 50%);
   color: black;
 }
 
@@ -8,9 +8,9 @@ header {
   border: 1px solid rgba(0, 0, 0, 0.089);
   color: black;
   display: flex;
+  font-size: large;
   justify-content: space-around;
-  padding-bottom: 5px;
-  padding-top: 5px;
+  padding: 10px 2px;
   text-align: center;
   width: 100%;
 }
@@ -43,7 +43,7 @@ header {
 }
 
 .categories-list {
-  background-color: #e6ddc6;
+  background-color: #f6f5f3c7;
   border: 1px solid rgba(0, 0, 0, 0.198);
   border-radius: 10px;
   margin-left: 10px;
@@ -75,8 +75,8 @@ header {
   display: flex;
   flex-flow: column;
   justify-content: space-around;
-  margin: 5px;
-  padding: 10px;
+  margin: 10px 2px;
+  padding: 15px 10px;
   text-align: center;
   width: 25%;
 }
@@ -132,7 +132,7 @@ header {
 
 .card-product-detail {
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.849);
+  background-color: rgba(255, 255, 255, 0.781);
   border: 1px solid rgba(0, 0, 0, 0.198);
   border-radius: 30px;
   display: flex;
@@ -140,7 +140,7 @@ header {
   justify-content: space-around;
   margin: auto;
   margin-top: 50px;
-  padding: 10px;
+  padding: 20px;
   text-align: center;
   width: 40%;
 }
@@ -166,7 +166,7 @@ header {
 
 .card-product-cart {
   align-items: center;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.815);
   border: 1px solid rgba(0, 0, 0, 0.109);
   border-radius: 30px;
   display: flex;
@@ -202,8 +202,8 @@ header {
 }
 
 .total-price {
-  background-color: rgba(115, 255, 0, 0.116);
-  padding: 2px;
+  background-color: rgba(250, 250, 250, 0.349);
+  padding: 10px;
   text-align: center;
 }
 
@@ -215,16 +215,16 @@ header {
   padding: 50px 20px;
 }
 
-.labels-checkout {
-  margin: 25px 10px;
+.form-info label {
+  margin: 15px;
 }
 
 .button-buy {
   background-color: rgba(120, 179, 61, 0.616);
   border: 1px solid rgba(0, 0, 0, 0.411);
   border-radius: 4px;
-  font-size: 17px;
-  margin: 20px;
+  font-size: 18px;
+  margin: 15px;
   padding: 5px;
 }
 
