--- a/src/App.css
+++ b/src/App.css
@@ -323,17 +323,16 @@
     background-color: #f6f5f3c7;
     border: 1px solid rgba(0, 0, 0, 0.198);
     border-radius: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    padding-bottom: 20px;
-    padding-left: 30px;
-    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    margin: 10px 20px;
+    padding: 10px 20px;
     width: 30%;
   }
 
-  .categories {
-    font-size: xx-large;
-    margin: 4px;
+  .categorie {
+    font-size: medium;
+    margin: 5px;
   }
 
   .products-list {
