--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
     font-size: x-small;
     justify-content: space-around;
     padding: 4px;
+    padding-bottom: 10px;
     position: fixed;
     text-align: center;
     width: 100%;
